2009-09-28  Werner Koch  <wk@g10code.com>

	Release 2.0.1.

	* src/gpg4win.mk.in (README_template): New.
	* src/Makefile.am (README.en.txt, README.de.txt): Remove
	(gpg4win_readme_ll): New.
	(README_files): New.
	(CLEANFILES): Delete all README files.
	(gpg4win-$(VERSION).exe, gpg4win-light-$(VERSION).exe)
	(gpg4win-$(VERSION).wix, gpg4win-light-$(VERSION).wix): Depend on
	all readme files.

	* src/inst-gpg4win.nsi: Install ar, es, fr and ru REDME files.
	* src/uninst-gpg4win.nsi: Uninstall them.

2009-09-28  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* configure.ac: Change compendium-de date and version (3.0.0-beta4)

2009-09-28  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gpgol to 1.0.1.

	* patches/gnupg2-2.0.12/11-photoid-sk.patch: New.

2009-09-25  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kleopatra (changed gpg4win version 
          number '2.0.1' only).

2009-09-14  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* configure.ac: Change compendium-de date and version
	(3.0.0-beta4-svn1286).

	* configure.ac: Change compendium-de date and version
	(3.0.0-beta4-svn1284).

2009-09-01  Colin Leroy  <colin@colino.net>

	* packages/packages.current: update Claws Mail - bugfixes
	(bad outgoing encoding in japanese, early crash accessing
	IMAP, LDAP crash on non-existent server)

2009-08-31  Werner Koch  <wk@g10code.com>

	Release 2.0.1rc1.

2009-08-07  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* configure.ac: Change compendium-de date and version
	(3.0.0-beta4-svn1273).

2009-08-28  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gpgol to svn308.

2009-08-19  Marcus Brinkmann  <marcus@g10code.com>

	* src/inst-gpgex.nsi: Fix arabic and russian translation.

2009-08-07  Werner Koch  <wk@g10code.com>

	Release 2.0.0.

	* patches/dirmngr-1.0.3/01-ldaphttp.patch: New.
	* Makefile.am (EXTRA_DIST): Add it.
